<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/master"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/hijo"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_h1" />
        <item
            android:id="@+id/invitado"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_invi" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/cocina"
            android:icon="@drawable/ic_kitchen_black_24dp"
            android:title="@string/menu_cosi" />
        <item
            android:id="@+id/sala"
            android:icon="@drawable/ic_tv_black_24dp"
            android:title="@string/menu_sala" />
        <item
            android:id="@+id/bano"
            android:icon="@drawable/ic_wc_black_24dp"
            android:title="@string/menu_bano"/>
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/garaje"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/menu_gara" />
        <item
            android:id="@+id/patio"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/menu_pati" />
    </group>
</menu>